made the necessary changes for deployment

--- a/success_stories.html
+++ b/success_stories.html
@@ -65,20 +65,20 @@
 <span class="text-xl font-bold tracking-tight">SOLAR<span class="text-primary text-xs ml-0.5 tracking-widest">AI</span></span>
 </div>
 <div class="hidden md:flex items-center gap-4">
-<a class="nav-link hover:text-primary transition-colors flex items-center gap-1.5" href="E:\solar anlyzer\stitch\stitch\index\code.html">
+<a class="nav-link hover:text-primary transition-colors flex items-center gap-1.5" href="E:\solar anlyzer\stitch\stitch\index.html.html">
 <span class="material-symbols-outlined text-lg">home</span>
 <span>Home</span>
 </a>
-<a class="nav-link text-primary font-medium bg-primary/10 flex items-center gap-1.5" href="E:\solar anlyzer\stitch\stitch\success_stories\code.html">
+<a class="nav-link text-primary font-medium bg-primary/10 flex items-center gap-1.5" href="E:\solar anlyzer\stitch\stitch\success_stories.html">
 <span class="material-symbols-outlined text-lg">auto_awesome</span>
 <span>Success Stories</span>
 </a>
-<a class="nav-link hover:text-primary transition-colors flex items-center gap-1.5" href="E:\solar anlyzer\stitch\stitch\technology_page\code.html">
+<a class="nav-link hover:text-primary transition-colors flex items-center gap-1.5" href="E:\solar anlyzer\stitch\stitch\technology_page.html">
 <span class="material-symbols-outlined text-lg">memory</span>
 <span>Technology</span>
 </a>
 
-<a href="E:\solar anlyzer\stitch\stitch\final_login_page\code.html">
+<a href="E:\solar anlyzer\stitch\stitch\final_login_page.html.html">
 <button class="ml-4 bg-primary text-background-dark px-6 py-2.5 rounded-lg font-bold hover:brightness-110 hover:shadow-[0_0_20px_rgba(19,236,91,0.4)] active:scale-95 transition-all">
                     Get Estimate
                 </a>
