--- a/index.html.html
+++ b/index.html.html
@@ -111,11 +111,11 @@
 <span class="text-2xl font-bold tracking-tight text-white">Solar<span class="text-primary">Pulse</span></span>
 </div>
 <div class="hidden md:flex items-center space-x-8">
-<a class="text-sm font-medium hover:text-primary transition-colors" href="E:\solar anlyzer\stitch\stitch\final home\code.html">Home</a>
-<a class="text-sm font-medium hover:text-primary transition-colors" href="E:\solar anlyzer\stitch\stitch\technology_page\code.html">Technology</a>
-<a class="text-sm font-medium hover:text-primary transition-colors" href="E:\solar anlyzer\stitch\stitch\success_stories\code.html">Success Stories</a>
-<a class="text-sm font-medium hover:text-primary transition-colors" href="E:\solar anlyzer\stitch\stitch\final_login_page\code.html">Login</a>
-<a href="E:\solar anlyzer\stitch\stitch\final_login_page\code.html">
+<a class="text-sm font-medium hover:text-primary transition-colors" href="E:\solar anlyzer\stitch\stitch\index\code.html">Home</a>
+<a class="text-sm font-medium hover:text-primary transition-colors" href="E:\solar anlyzer\stitch\stitch\technology_page.html">Technology</a>
+<a class="text-sm font-medium hover:text-primary transition-colors" href="E:\solar anlyzer\stitch\stitch\success_stories.html">Success Stories</a>
+<a class="text-sm font-medium hover:text-primary transition-colors" href="E:\solar anlyzer\stitch\stitch\final_login_page.html.html">Login</a>
+<a href="E:\solar anlyzer\stitch\stitch\final_login_page.html.html">
 <button class="bg-primary hover:bg-primary/90 text-background-dark px-6 py-2.5 rounded-lg font-bold transition-all transform hover:scale-105 animate-pulse-glow">
                     Calculate Savings
                 </a>
