changes done in index.html file error name

--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
 <span class="text-2xl font-bold tracking-tight text-white">Solar<span class="text-primary">Pulse</span></span>
 </div>
 <div class="hidden md:flex items-center space-x-8">
-<a class="text-sm font-medium hover:text-primary transition-colors" href="E:\solar anlyzer\stitch\stitch\index\code.html">Home</a>
+<a class="text-sm font-medium hover:text-primary transition-colors" href="E:\solar anlyzer\stitch\stitch\index.html">Home</a>
 <a class="text-sm font-medium hover:text-primary transition-colors" href="E:\solar anlyzer\stitch\stitch\technology_page.html">Technology</a>
 <a class="text-sm font-medium hover:text-primary transition-colors" href="E:\solar anlyzer\stitch\stitch\success_stories.html">Success Stories</a>
 <a class="text-sm font-medium hover:text-primary transition-colors" href="E:\solar anlyzer\stitch\stitch\final_login_page.html.html">Login</a>
