--- a/success_stories.html
+++ b/success_stories.html
@@ -65,7 +65,7 @@
 <span class="text-xl font-bold tracking-tight">SOLAR<span class="text-primary text-xs ml-0.5 tracking-widest">AI</span></span>
 </div>
 <div class="hidden md:flex items-center gap-4">
-<a class="nav-link hover:text-primary transition-colors flex items-center gap-1.5" href="E:\solar anlyzer\stitch\stitch\index.html.html">
+<a class="nav-link hover:text-primary transition-colors flex items-center gap-1.5" href="E:\solar anlyzer\stitch\stitch\index.html">
 <span class="material-symbols-outlined text-lg">home</span>
 <span>Home</span>
 </a>
