--- a/technology_page.html
+++ b/technology_page.html
@@ -87,7 +87,7 @@
 <span class="text-2xl font-bold tracking-tight text-white italic">Solar<span class="text-primary">Pulse</span></span>
 </a>
 <div class="hidden md:flex items-center gap-8 text-sm font-medium text-slate-400">
-<a class="hover:text-primary transition-colors" href="E:\solar anlyzer\stitch\stitch\index.html.html">Home</a>
+<a class="hover:text-primary transition-colors" href="E:\solar anlyzer\stitch\stitch\index.html">Home</a>
 <a class="hover:text-primary transition-colors" href="E:\solar anlyzer\stitch\stitch\success_stories.html">Success Stories</a>
 <a class="hover:text-primary transition-colors" href="E:\solar anlyzer\stitch\stitch\final_login_page.html.html">Login</a>
 <a class="text-primary border-b-2 border-primary pb-1" href="E:\solar anlyzer\stitch\stitch\technology_page.html">Technology</a>
