--- a/signup_page.html
+++ b/signup_page.html
@@ -165,7 +165,7 @@
 <div class="mt-10 text-center">
 <p class="text-sm text-slate-500">
                         Already have an account? 
-                        <a class="text-primary font-semibold hover:underline decoration-2 underline-offset-4 ml-1" href="E:\solar anlyzer\stitch\stitch\final_login_page.html.html">Log in</a>
+                        <a class="text-primary font-semibold hover:underline decoration-2 underline-offset-4 ml-1" href="E:\solar anlyzer\stitch\stitch\final_login_page.html">Log in</a>
 </p>
 </div>
 <div class="mt-8 pt-6 border-t border-slate-100 dark:border-slate-800 text-center">
