--- a/success_stories.html
+++ b/success_stories.html
@@ -78,7 +78,7 @@
 <span>Technology</span>
 </a>
 
-<a href="E:\solar anlyzer\stitch\stitch\final_login_page.html.html">
+<a href="E:\solar anlyzer\stitch\stitch\final_login_page.html">
 <button class="ml-4 bg-primary text-background-dark px-6 py-2.5 rounded-lg font-bold hover:brightness-110 hover:shadow-[0_0_20px_rgba(19,236,91,0.4)] active:scale-95 transition-all">
                     Get Estimate
                 </a>
