--- a/index.html
+++ b/index.html
@@ -114,8 +114,8 @@
 <a class="text-sm font-medium hover:text-primary transition-colors" href="E:\solar anlyzer\stitch\stitch\index.html">Home</a>
 <a class="text-sm font-medium hover:text-primary transition-colors" href="E:\solar anlyzer\stitch\stitch\technology_page.html">Technology</a>
 <a class="text-sm font-medium hover:text-primary transition-colors" href="E:\solar anlyzer\stitch\stitch\success_stories.html">Success Stories</a>
-<a class="text-sm font-medium hover:text-primary transition-colors" href="E:\solar anlyzer\stitch\stitch\final_login_page.html.html">Login</a>
-<a href="E:\solar anlyzer\stitch\stitch\final_login_page.html.html">
+<a class="text-sm font-medium hover:text-primary transition-colors" href="E:\solar anlyzer\stitch\stitch\final_login_page.html">Login</a>
+<a href="E:\solar anlyzer\stitch\stitch\final_login_page.html">
 <button class="bg-primary hover:bg-primary/90 text-background-dark px-6 py-2.5 rounded-lg font-bold transition-all transform hover:scale-105 animate-pulse-glow">
                     Calculate Savings
                 </a>
