--- a/technology_page.html
+++ b/technology_page.html
@@ -89,13 +89,13 @@
 <div class="hidden md:flex items-center gap-8 text-sm font-medium text-slate-400">
 <a class="hover:text-primary transition-colors" href="E:\solar anlyzer\stitch\stitch\index.html">Home</a>
 <a class="hover:text-primary transition-colors" href="E:\solar anlyzer\stitch\stitch\success_stories.html">Success Stories</a>
-<a class="hover:text-primary transition-colors" href="E:\solar anlyzer\stitch\stitch\final_login_page.html.html">Login</a>
+<a class="hover:text-primary transition-colors" href="E:\solar anlyzer\stitch\stitch\final_login_page.html">Login</a>
 <a class="text-primary border-b-2 border-primary pb-1" href="E:\solar anlyzer\stitch\stitch\technology_page.html">Technology</a>
 </div>
 </div>
 <a class="flex items-center gap-4">
 
-<a href="E:\solar anlyzer\stitch\stitch\final_login_page.html.html">
+<a href="E:\solar anlyzer\stitch\stitch\final_login_page.html">
 <button class="bg-primary text-black font-bold text-xs px-6 py-2.5 rounded shadow-[0_0_20px_rgba(19,236,91,0.4)] hover:scale-105 transition-transform">
                     GET STARTED
                 </button>
