changes done in URL

--- a/final_login_page.html
+++ b/final_login_page.html
@@ -112,7 +112,7 @@
 <span>Sign In</span>
 <span class="material-symbols-outlined text-[20px]">login</span>
 </button>
-<a class="signup-button-hover flex-1 border-2 border-primary text-primary hover:bg-primary/10 font-bold py-4 rounded-lg transition-all flex items-center justify-center gap-2 cursor-pointer group decoration-none" href="E:\solar anlyzer\stitch\stitch\signup_page.html">
+<a class="signup-button-hover flex-1 border-2 border-primary text-primary hover:bg-primary/10 font-bold py-4 rounded-lg transition-all flex items-center justify-center gap-2 cursor-pointer group decoration-none" href="signup_page.html">
 <span>Sign Up</span>
 <span class="material-symbols-outlined text-[20px] arrow-icon">arrow_forward</span>
 </a>
