changes done in index files

--- a/index.html
+++ b/index.html
@@ -319,7 +319,7 @@
 </div>
 </div>
 <div class="pt-8 border-t border-white/5 flex flex-col md:flex-row justify-between items-center gap-4 text-xs text-slate-500">
-<p>© 2024 SolarPulse AI. All rights reserved.</p>
+<p>Developed by US INFOTECH</p>
 <div class="flex gap-6">
 <a class="hover:text-white transition-colors" href="#">Privacy Policy</a>
 <a class="hover:text-white transition-colors" href="#">Terms of Service</a>
